--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,4 +15,46 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#videointerview {
+  background-color: #fbfbfb;
+  height: 100vh;
+  width: 100vw;
+}
+
+#layout {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#card {
+  border-radius: var(--space-20, 1.25rem);
+  box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.15),
+    0px 0px 0px 1px rgba(0, 0, 0, 0.18) inset;
+}
+
+#webcam_area {
+  position: relative;
+  top: -85px;
+}
+
+#webcam_center {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#webcam_circle {
+  border-radius: 999px;
+  border: 8px solid white;
+}
+
+button {
+  user-select: none;
 }
