--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,13 @@ ul li {
 li {
   padding: 8px !important;
 }
+
+#alert {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 16px;
+  z-index: 9999;
+}
