--- a/src/index.css
+++ b/src/index.css
@@ -17,19 +17,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-#videointerview {
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
   background-color: #fbfbfb;
-  height: 100vh;
-  width: 100vw;
 }
 
 #layout {
+  box-sizing: border-box;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 #card {
@@ -57,4 +65,27 @@
 
 button {
   user-select: none;
+}
+
+@media (max-width: 480px) {
+  #card {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 16px;
+  }
+  #question {
+    width: 100%;
+    height: 100%;
+  }
+  #webcam_area {
+    top: 8px;
+  }
+}
+
+#question h3 {
+  /* https://developer.mozilla.org/en-US/docs/Web/CSS/clamp */
+  /* https://www.smashingmagazine.com/2022/01/modern-fluid-typography-css-clamp/ */
+  font-size: clamp(1rem, 0.8438rem + 0.5vw, 1.125rem);
 }
